# celement

./: README.md  pyproject.toml
.github/workflows/: style-checks.yml  test.yml
celement/: __init__.py  dolfinx.py  utils.py
examples/: _test.py  simple.py  simpler.py  simplest.py  simplest2.py  solve_convergence.py
test/: test_containing_cells.py  test_dolfinx.py
