[project]
name = "celement"
version = "0.0.0dev"
description = "coupling via a finite element"
readme = "README.md"
requires-python = ">=3.8.0"
license = { file = "LICENSE" }
authors = [
    { name = "Matthew Scroggs", email = "celement@mscroggs.co.uk" }
]
dependencies = ["numpy", "fenics-dolfinx"]

[project.urls]
homepage = "https://github.com/mscroggs/celement"
repository = "https://github.com/mscroggs/celement"

[project.optional-dependencies]
optional = []
style = ["ruff", "mypy", "isort"]
test = ["pytest", "celement[optional]"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
